--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="reset-stylesheet" href="./assets/resetstylesheet.css">
-    <link rel="css-stylesheet" href="./assets/stylesheet.css">
+    <link rel="stylesheet" href="./assets/reset.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
 </head>
+
 <body>
-    
+    <header>
+        <h1>Jenna Strom</h1>
+        <nav>
+            <ul class="header-list">
+                <li>About Me</li>
+                <li>Work</li>
+                <li>Contact Me</li>
+                <li>Resume</li>
+            </ul>
+        </nav>
+    </header>
+    <div class="banner">
+        <div class="banner-text">
+            <h2>Full Stack Web Developer Portfolio</h2>
+        </div>
+    </div>
 </body>
+
 </html>
