--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jenna Strom's Portfolio</title>
     <link rel="stylesheet" href="./assets/reset.css" />
     <link rel="stylesheet" href="./assets/style.css" />
 </head>
@@ -13,20 +13,44 @@
 <body>
     <header>
         <h1>Jenna Strom</h1>
-        <nav>
-            <ul class="header-list">
-                <li>About Me</li>
-                <li>Work</li>
-                <li>Contact Me</li>
-                <li>Resume</li>
+        <nav class="header-list">
+            <ul>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Contact Me</a></li>
+                <li><a href="#">Resume</a></li>
             </ul>
         </nav>
     </header>
     <div class="banner">
         <div class="banner-text">
-            <h2>Full Stack Web Developer Portfolio</h2>
+            <h2>Full Stack Web Developer</h2>
         </div>
     </div>
+    <main>
+    <section class="about-me">
+        <h3 class="side-heading">About Me</h3>
+        <p class="about-me">My name is Jenna Strom and I live in Minneapolis, Minnesota with my husband, our two-year
+            old son and our two dogs. I love to be outside during the summer and go on walks. During the winter I love
+            to stay cozy and do puzzles or play board games. I've been a wedding cake decorator for the past 15 years
+            and also manage a cake decorating supplies store. I am both creative and logic brained and I love that
+            website developing uses both!</p>
+    </section>
+    <section class="work">
+        <h4 class="side-heading">Work</h4>
+    </section>
+    <section class="contact-me">
+        <h5 class="side-heading">Contact Me</h5>
+            <nav class="contact-info">
+                <ul>
+                    <li><a href="tel:7632679444">763-267-9444</a></li>
+                    <li><a href="mailto:jennajohnson16@gmail.com">jennajohnson16@gmail.com</a></li>
+                    <li><a href="https://github.com/JennaStrom">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com">Linkedin</a></li>
+                </ul>
+            </nav>
+    </section>
+</main>
 </body>
 
 </html>
