updated the work info section

--- a/index.html
+++ b/index.html
@@ -28,19 +28,52 @@
         </div>
     </div>
     <main>
-    <section class="about-me">
-        <h3 class="side-heading">About Me</h3>
-        <p class="about-me">My name is Jenna Strom and I live in Minneapolis, Minnesota with my husband, our two-year
-            old son and our two dogs. I love to be outside during the summer and go on walks. During the winter I love
-            to stay cozy and do puzzles or play board games. I've been a wedding cake decorator for the past 15 years
-            and also manage a cake decorating supplies store. I am both creative and logic brained and I love that
-            website developing uses both!</p>
-    </section>
-    <section class="work">
-        <h4 class="side-heading">Work</h4>
-    </section>
-    <section class="contact-me">
-        <h5 class="side-heading">Contact Me</h5>
+        <section class="about-me">
+            <h3 class="side-heading">About Me</h3>
+            <p class="about-me">My name is Jenna Strom and I live in Minneapolis, Minnesota with my husband, our
+                two-year
+                old son and our two dogs. I love to be outside during the summer and go on walks. During the winter I
+                love
+                to stay cozy and do puzzles or play board games. I've been a wedding cake decorator for the past 15
+                years
+                and also manage a cake decorating supplies store. I am both creative and logic brained and I love that
+                website developing uses both!</p>
+        </section>
+        <section class="work">
+            <h4 class="side-heading">Work</h4>
+            <div class="container">
+                <ul class="image-gallery">
+                    <li id="project-one">
+                        <div class="overlay"><span>Project One</span></div>
+                        <img src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                            alt="placeholder-image">
+                    </li>
+                    <li>
+                        <div class="overlay"><span>Project Two</span></div>
+                        <img src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                            alt="placeholder-image">
+
+                    </li>
+                    <li>
+                        <div class="overlay"><span>Project Three</span></div>
+                        <img src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                            alt="placeholder-image">
+                    </li>
+                    <li>
+                        <div class="overlay"><span>Project Four</span></div>
+                        <img src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                            alt="placeholder-image">
+                    </li>
+                    <li>
+                        <div class="overlay"><span>Project Five</span></div>
+                        <img src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                            alt="placeholder-image">
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="contact-me">
+            <h5 class="side-heading">Contact Me</h5>
             <nav class="contact-info">
                 <ul>
                     <li><a href="tel:7632679444">763-267-9444</a></li>
@@ -49,8 +82,8 @@
                     <li><a href="https://www.linkedin.com">Linkedin</a></li>
                 </ul>
             </nav>
-    </section>
-</main>
+        </section>
+    </main>
 </body>
 
 </html>
