added links to work section

--- a/index.html
+++ b/index.html
@@ -45,29 +45,34 @@
                 <ul class="image-gallery">
                     <li id="project-one">
                         <div class="overlay"><span>Project One</span></div>
-                        <img src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
-                            alt="placeholder-image">
+                        <a href="http://www.github.com" target="blank"><img
+                                src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                                alt="placeholder-image" /></a>
                     </li>
                     <li>
                         <div class="overlay"><span>Project Two</span></div>
-                        <img src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
-                            alt="placeholder-image">
+                        <a href="http://www.github.com" target="blank"><img
+                                src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                                alt="placeholder-image"></a>
 
                     </li>
                     <li>
                         <div class="overlay"><span>Project Three</span></div>
-                        <img src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
-                            alt="placeholder-image">
+                        <a href="http://www.github.com" target="blank"><img
+                                src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                                alt="placeholder-image" /></a>
                     </li>
                     <li>
                         <div class="overlay"><span>Project Four</span></div>
-                        <img src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
-                            alt="placeholder-image">
+                        <a href="http://www.github.com" target="blank"><img
+                                src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                                alt="placeholder-image"></a>
                     </li>
                     <li>
                         <div class="overlay"><span>Project Five</span></div>
-                        <img src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
-                            alt="placeholder-image">
+                        <a href="http://www.github.com" target="blank"><img
+                                src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                                alt="placeholder-image"></a>
                     </li>
                 </ul>
             </div>
