Fixed the work layout

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <h1>Jenna Strom</h1>
         <nav class="header-list">
             <ul>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Contact Me</a></li>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact-me">Contact Me</a></li>
                 <li><a href="#">Resume</a></li>
             </ul>
         </nav>
@@ -28,7 +28,7 @@
         </div>
     </div>
     <main>
-        <section class="about-me">
+        <section class="about-me" id="about-me">
             <h3 class="side-heading">About Me</h3>
             <p class="about-me">My name is Jenna Strom and I live in Minneapolis, Minnesota with my husband, our
                 two-year
@@ -39,21 +39,21 @@
                 and also manage a cake decorating supplies store. I am both creative and logic brained and I love that
                 website developing uses both!</p>
         </section>
-        <section class="work">
+        <section class="work" id="work">
             <h4 class="side-heading">Work</h4>
             <div class="container">
                 <ul class="image-gallery">
-                    <li id="project-one">
+                    <li id="project-one" >
                         <div class="overlay"><span>Project One</span></div>
                         <a href="http://www.github.com" target="blank"><img
                                 src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
                                 alt="placeholder-image" /></a>
                     </li>
                     <li>
-                        <div class="overlay"><span>Project Two</span></div>
-                        <a href="http://www.github.com" target="blank"><img
-                                src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
-                                alt="placeholder-image"></a>
+                    <div class="overlay"><span>Project Two</span></div>
+                    <a href="http://www.github.com" target="blank"><img
+                            src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                            alt="placeholder-image"></a>
 
                     </li>
                     <li>
@@ -77,7 +77,7 @@
                 </ul>
             </div>
         </section>
-        <section class="contact-me">
+        <section class="contact-me" id="contact-me">
             <h5 class="side-heading">Contact Me</h5>
             <nav class="contact-info">
                 <ul>
