--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </nav>
     </header>
     <div class="banner">
+        <img src="/assets/Headshot.jpg" class="headshot" alt="placeholder-image">
         <div class="banner-text">
             <h2>Full Stack Web Developer</h2>
         </div>
