--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <div class="banner">
-        <img src="/assets/Headshot.jpg" class="headshot" alt="placeholder-image">
+        <img src="./assets/Headshot.jpg" class="headshot" alt="Headshot">
         <div class="banner-text">
             <h2>Full Stack Web Developer</h2>
         </div>
@@ -41,38 +41,38 @@
                 website developing uses both!</p>
         </section>
         <section class="work" id="work">
-            <h4 class="side-heading">Work</h4>
+            <h3 class="side-heading">Work</h3>
             <div class="container">
                 <ul class="image-gallery">
                     <li id="project-one" >
                         <div class="overlay"><span>Project One</span></div>
                         <a href="http://www.github.com" target="blank"><img
-                                src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                                src="./assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
                                 alt="placeholder-image" /></a>
                     </li>
                     <li>
                     <div class="overlay"><span>Project Two</span></div>
                     <a href="http://www.github.com" target="blank"><img
-                            src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                            src="./assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
                             alt="placeholder-image"></a>
 
                     </li>
                     <li>
                         <div class="overlay"><span>Project Three</span></div>
                         <a href="http://www.github.com" target="blank"><img
-                                src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                                src="./assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
                                 alt="placeholder-image" /></a>
                     </li>
                     <li>
                         <div class="overlay"><span>Project Four</span></div>
                         <a href="http://www.github.com" target="blank"><img
-                                src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                                src="./assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
                                 alt="placeholder-image"></a>
                     </li>
                     <li>
                         <div class="overlay"><span>Project Five</span></div>
                         <a href="http://www.github.com" target="blank"><img
-                                src="/assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
+                                src="./assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
                                 alt="placeholder-image"></a>
                     </li>
                 </ul>
