added link to project one

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="container">
                 <ul class="image-gallery">
                     <li id="project-one" >
-                        <div class="overlay"><span>Project One</span></div>
-                        <a href="http://www.github.com" target="blank"><img
+                        <div class="overlay"><span>Project One: Beer and a Show API</span></div>
+                        <a href="https://jennastrom.github.io/Beer-and-a-show/" target="blank"><img
                                 src="./assets/glittering-shining-holidays-backdrop-festivities-77019006.jpg"
                                 alt="placeholder-image" /></a>
                     </li>
